--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,32 +7,29 @@ name = "layerwise"
 version = "0.1.0"
 description = "A Python project for layerwise operations and analysis"
 readme = "README.md"
-authors = [
-    {name = "2phi", email = "your-email@example.com"}
-]
-license = {text = "MIT"}
+authors = [{ name = "Yannik Werner", email = "yannik.werner@yahoo.de" }]
+license = { text = "MIT" }
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
-requires-python = ">=3.8"
-dependencies = []
+requires-python = ">=3.12"
+dependencies = [
+    "ipykernel",
+    "numpy",
+    "scipy",
+    "pydantic",
+    "streamlit",
+    "plotly",
+    "tqdm",
+    "snowpylot",
+]
 
 [project.optional-dependencies]
-dev = [
-    "pytest",
-    "black",
-    "isort",
-    "flake8",
-    "mypy",
-]
+dev = ["pytest", "black", "isort", "flake8", "mypy"]
 
 [project.urls]
 Homepage = "https://github.com/2phi/layerwise"
@@ -45,14 +42,14 @@ include = ["layerwise*"]
 
 [tool.black]
 line-length = 88
-target-version = ['py38']
+target-version = ['py312']
 
 [tool.isort]
 profile = "black"
 line_length = 88
 
 [tool.mypy]
-python_version = "3.8"
+python_version = "3.12"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
