--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,16 +18,14 @@ classifiers = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "weac==3.0.1",
     "ipykernel",
-    "numpy",
-    "scipy",
-    "pydantic",
-    "streamlit",
-    "plotly",
-    "tqdm",
-    "snowpylot",
     "ipywidgets",
     "nbformat",
+    "tqdm",
+
+    "streamlit",
+    "plotly",
 ]
 
 [project.optional-dependencies]
